--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: "amatic_scregular";
-  src: url("amaticsc-regular-webfont.woff2") format("woff2"),
-    url("amaticsc-regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 /* ========================================================================
     ALL
 ======================================================================== */
@@ -35,6 +27,14 @@
   --clrBtnBackground: green;
   --clrBtnHoverBackground: rgb(69, 223, 69, 0.8);
   --clrBtnText: white;
+}
+
+@font-face {
+  font-family: "amatic_scregular";
+  src: url("../fontskit/amaticsc-regular-webfont.woff2") format("woff2"),
+    url("../fontskit/amaticsc-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* ========================================================================
@@ -85,8 +85,10 @@
 }
 .companyArea p {
   padding: 1rem;
-  font-size: 3rem;
+  font-size: 3.5rem;
+  font-weight: bold;
   color: white;
+  font-family: "amatic_scregular";
 }
 .copyright {
   /* TODO: Solution to put this at the end of the page */
